--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,3 +1,7 @@
-body{
-  background-color:yellow ;
-}
+@import "base/normalize";
+
+@import "base/base";
+
+@import "components/page";
+@import "components/header";
+@import "components/navigation";
