feat: add styles for header

--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -1,21 +1,90 @@
-.header{
+.header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  background-color: burlywood;
+  width: 100%;
+}
+
+.header__container {
+  display: flex;
+  padding: 0 30px;
+  align-items: center;
+  justify-content: space-between;
+  min-height: 70px;
+}
+
+.header__logo {
+  position: relative;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-color: #fff;
+}
+
+.header__menu {
 
 }
-.header__container{
+
+.menu {
 
 }
-.header__logo{
+
+.menu__icon {
 
 }
-.header__menu{
+//основное меню
+.menu__list {
+  position: relative;
+  @include media-desktop {
+    display: flex;
+    align-items: center;
+    & > li {
+      padding: 10px 0;
+    }
+  }
+}
+
+.menu__link {
+  color: blueviolet;
+  font-size: 1.8rem;
+  margin: 0 0 0 20px;
+  &:hover{
+    text-decoration: underline;
+  }
+}
+//подменю - его позиционируем через абсолют
+.menu__sub-list {
+  position: absolute;
+  // это опускает меню на 100% от верха родителя
+  top: 100%;
+  right: 0;
+  background-color: black;
+  padding: 15px;
+  min-width: 100px;
+
+  @include media-desktop{
+    //это опускает меню на 10% вниз
+    transform: translate(0px,10%);
+    //это скрывает подменю
+    opacity: 0;
+    //это для того,чтобы с ним нельзя было взаимодействовать
+    visibility: hidden;
+    pointer-events: none;
+    transition: all 0.3s ease 0s;
+  }
+
+  & > li {
+    margin: 0 0 10px 0;
+  }
+
+  & > li:last-child {
+    margin: 0;
+  }
 
 }
-.menu{
 
-}
-.menu__icon{
-
-}
-.menu__list{
-
+.menu__sub-link {
+  color: #fff;
 }
