feat: add styles and js for icon animation

--- a/src/sass/abstract/_mixin.scss
+++ b/src/sass/abstract/_mixin.scss
@@ -4,3 +4,14 @@
     @content;
   }
 }
+
+//это применится,когда ширина меньше 767px
+@mixin media-mobile {
+  @media (max-width: 767px) {
+    @content;
+  }
+}
+
+@mixin transition {
+  transition: all 0.3s ease 0s;
+}
