--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -7,6 +7,10 @@ body{
   font-size: 1.6rem;
   font-family: Arial,Helvetica,sans-serif;
   background-color:ghostwhite;
+  //запрещает скролл,когда активирован класс _lock
+  &._lock{
+    overflow: hidden;
+  }
 }
 .wrapper{
   min-height: 100%;
