--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -32,7 +32,59 @@
 }
 
 .menu__icon {
+  display: none;
+  //рисуется иконка бургер меню
+  @include media-mobile {
+    display: block;
+    position: relative;
+    width: 30px;
+    height: 18px;
+    cursor: pointer;
+    z-index: 15;
 
+    span,
+    &:before,
+    &:after {
+      position: absolute;
+      left: 0;
+      height: 10%;
+      width: 100%;
+      background-color: white;
+      @include transition;
+    }
+
+    &:before,
+    &:after {
+      content: '';
+    }
+
+    &:before {
+      top: 0;
+    }
+
+    &:after {
+      bottom: 0;
+    }
+    span {
+      top: 50%;
+      //благодаря scale(1)мы можем легко убрать элемент,задав scale(0)
+      transform: scale(1) translate(0, -50%);
+    }
+    // icon animation
+    &._active{
+      span{
+        transform: scale(0);
+      }
+      &:before{
+        top:50%;
+        transform: rotate(45deg) translate(0,-50%);
+      }
+      &:after{
+        bottom:50%;
+        transform: rotate(135deg) translate(0,-50%);
+      }
+    }
+  }
 }
 
 
