--- a/src/sass/components/_navigation.scss
+++ b/src/sass/components/_navigation.scss
@@ -1,16 +1,40 @@
 .menu__body {
+  @include media-mobile {
+    position: fixed;
+    top: 0;
+    //это механизм смещения меню за пределы экрана влево
+    left:-120%;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.9);
+    padding: 100px 30px 50px 30px;
+    transition: left 0.3s ease 0s;
+    overflow:auto;
+    //появление меню,когда появляется класс _active
+    &._active{
+      left: 0;
+    }
+  }
 
 }
 
 //основное меню
 .menu__list {
   position: relative;
-
   @include media-desktop {
     display: flex;
     align-items: center;
     & > li {
       padding: 10px 0;
+    }
+  }
+  @include media-mobile {
+    & > li {
+      margin: 0 45px 30px 0;
+      flex-wrap: wrap;
+    }
+    & > li:last-child {
+      margin: 0;
     }
   }
   //если у боди есть класс _pc , то при наведении на subsection 1 будет появляться меню
@@ -46,6 +70,9 @@ body._touch {
 
   & .menu__link {
     flex: 1 1 auto;
+    @include media-mobile {
+      font-size: 2.4rem;
+    }
   }
 
   // это то же самое,что и в 18 строчке - только срабатывает при нажатии стрелки
@@ -92,7 +119,17 @@ body._touch {
     //это для того,чтобы с ним нельзя было взаимодействовать
     visibility: hidden;
     pointer-events: none;
-    transition: all 0.3s ease 0s;
+    @include transition;
+  }
+  @include media-mobile {
+    position: relative;
+    background-color: white;
+    flex: 1 1 100%;
+    margin-top: 20px;
+    display: none;
+    .menu__list > li._active & {
+      display: block;
+    }
   }
 
   & > li {
@@ -107,6 +144,10 @@ body._touch {
 
 .menu__sub-link {
   color: #fff;
+  @include media-mobile {
+    font-size: 2rem;
+    color: black;
+  }
 
   &:hover {
     text-decoration: underline;
