--- a/src/sass/style.css
+++ b/src/sass/style.css
@@ -35,6 +35,8 @@ body {
   font-size: 1.6rem;
   font-family: Arial,Helvetica,sans-serif;
   background-color: ghostwhite; }
+  body._lock {
+    overflow: hidden; }
 
 .wrapper {
   min-height: 100%; }
@@ -90,6 +92,55 @@ body {
   border-radius: 50%;
   background-color: #fff; }
 
+.menu__icon {
+  display: none; }
+  @media (max-width: 767px) {
+    .menu__icon {
+      display: block;
+      position: relative;
+      width: 30px;
+      height: 18px;
+      cursor: pointer;
+      z-index: 15; }
+      .menu__icon span, .menu__icon:before, .menu__icon:after {
+        position: absolute;
+        left: 0;
+        height: 10%;
+        width: 100%;
+        background-color: white;
+        transition: all 0.3s ease 0s; }
+      .menu__icon:before, .menu__icon:after {
+        content: ''; }
+      .menu__icon:before {
+        top: 0; }
+      .menu__icon:after {
+        bottom: 0; }
+      .menu__icon span {
+        top: 50%;
+        transform: scale(1) translate(0, -50%); }
+      .menu__icon._active span {
+        transform: scale(0); }
+      .menu__icon._active:before {
+        top: 50%;
+        transform: rotate(45deg) translate(0, -50%); }
+      .menu__icon._active:after {
+        bottom: 50%;
+        transform: rotate(135deg) translate(0, -50%); } }
+
+@media (max-width: 767px) {
+  .menu__body {
+    position: fixed;
+    top: 0;
+    left: -120%;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.9);
+    padding: 100px 30px 50px 30px;
+    transition: left 0.3s ease 0s;
+    overflow: auto; }
+    .menu__body._active {
+      left: 0; } }
+
 .menu__list {
   position: relative; }
   @media (min-width: 768px) {
@@ -98,6 +149,12 @@ body {
       align-items: center; }
       .menu__list > li {
         padding: 10px 0; } }
+  @media (max-width: 767px) {
+    .menu__list > li {
+      margin: 0 45px 30px 0;
+      flex-wrap: wrap; }
+    .menu__list > li:last-child {
+      margin: 0; } }
   body._pc .menu__list > li:hover .menu__sub-list {
     opacity: 1;
     visibility: visible;
@@ -118,6 +175,9 @@ body._touch .menu__list > li {
   align-items: center; }
 body._touch .menu__link {
   flex: 1 1 auto; }
+  @media (max-width: 767px) {
+    body._touch .menu__link {
+      font-size: 2.4rem; } }
 body._touch .menu__list > li._active .menu__sub-list {
   opacity: 1;
   visibility: visible;
@@ -147,6 +207,15 @@ body._touch .menu__list > li._active .menu__arrow {
       visibility: hidden;
       pointer-events: none;
       transition: all 0.3s ease 0s; } }
+  @media (max-width: 767px) {
+    .menu__sub-list {
+      position: relative;
+      background-color: white;
+      flex: 1 1 100%;
+      margin-top: 20px;
+      display: none; }
+      .menu__list > li._active .menu__sub-list {
+        display: block; } }
   .menu__sub-list > li {
     margin: 0 0 10px 0; }
   .menu__sub-list > li:last-child {
@@ -154,6 +223,10 @@ body._touch .menu__list > li._active .menu__arrow {
 
 .menu__sub-link {
   color: #fff; }
+  @media (max-width: 767px) {
+    .menu__sub-link {
+      font-size: 2rem;
+      color: black; } }
   .menu__sub-link:hover {
     text-decoration: underline; }
 
